redactable/tests/ui/sensitive_display_dynamic_width_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
#[error("value {value:.*}")]
struct DynamicWidth {
    value: String,
}

fn main() {}
